--- a/index.html
+++ b/index.html
@@ -82,20 +82,20 @@
 				</div>
 
 				<!-- slider -->
-				<div class="slider">
+				<section class="slider">
 					<ul class="slider-list">
-						<li class="slider-item">
-							<h2 class="slider-title">Дрели</h2>
+						<li class="slider-item slide">
+							<h2 class="slide-title">Дрели</h2>
 							<span>Соседям на радость</span>
 							<a class="slider-link" href="#">Открыть каталог</a>
 						</li>
-						<li class="slider-item">
-							<h2 class="slider-title">Перфоратор</h2>
+						<li class="slider-item slide">
+							<h2 class="slide-title">Перфоратор</h2>
 							<span>Настоящие мужские игрушки</span>
 							<a class="slider-link" href="#">Открыть каталог</a>
 						</li>
 					</ul>
-					<div class="slider-control">
+					<div class="slider-controls">
 						<div>
 							<button class="slider-prev" type="button" aria-label="Предыдущий слайд"></button>
 							<button class="slider-next" type="button" aria-label="Следующий слайд"></button>
@@ -106,7 +106,7 @@
 						</ul>
 					</div>
 				</div>
-			</div>
+			</section>
 			</section>
 
 			<!-- POPULAR PRODUCTS -->
