--- a/inner.html
+++ b/inner.html
@@ -148,7 +148,7 @@
 
 				<!-- PRODUCT LIST -->
 				<section class="product-list">
-					<h2>Список товаров</h2>
+					<h2 class="visually-hidden product-title">Список товаров</h2>
 					<!-- product item 1 -->
 					<article class="product-item">
 						<img class="product-photo" src="img/Perforator_1.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 3000">
