--- a/index.html
+++ b/index.html
@@ -253,26 +253,28 @@
 						<a class="footer-phone" href="tel:+78125550555">+7 (812) 555-05-55</a>
 					</p>
 				</div>
-				<ul class="footer-navigation">
-					<li><a href="#">Компания</a></li>
-					<li><a href="#">Новости</a></li>
-					<li><a href="#">Каталог</a></li>
-					<li><a href="#">Доставка</a></li>
-					<li><a href="#">Контакты</a></li>
-				</ul>
-				<ul class="footer-offers">
-					<li><a href="#">Материалы</a></li>
-					<li><a href="#">Техника</a></li>
-					<li><a href="#">Инструмент</a></li>
-					<li><a href="#">Спецпредложения</a></li>
-				</ul>
+				<div class="footer-navigation-items">
+					<ul class="footer-navigation">
+						<li><a href="#">Компания</a></li>
+						<li><a href="#">Новости</a></li>
+						<li><a href="#">Каталог</a></li>
+						<li><a href="#">Доставка</a></li>
+						<li><a href="#">Контакты</a></li>
+					</ul>
+					<ul class="footer-offers">
+						<li><a href="#">Материалы</a></li>
+						<li><a href="#">Техника</a></li>
+						<li><a href="#">Инструмент</a></li>
+						<li><a href="#">Спецпредложения</a></li>
+					</ul>
+				</div>
 			</div>
 		</div>
 		<!-- footer bottom -->
 		<div class="footer-bottom">
 			<div class="container footer-bottom-row">
 				<p class="copyright">© 2010–2019 Компания «Техномарт» Все права защищены</p>
-				<ul class="footer-bottom-social">
+				<ul class="footer-social">
 					<li><a class="btn-social btn-social-vk" href="#" aria-label="Вконтакте"></a></li>
 					<li><a class="btn-social btn-social-fb" href="#" aria-label="Фейсбук"></a></li>
 					<li><a class="btn-social btn-social-i" href="#" aria-label="Инстаграм"></a></li>
