--- a/inner.html
+++ b/inner.html
@@ -272,50 +272,52 @@
 			</main>
 			<!-- FOOTER -->
 			<footer class="footer">
-				<!-- footer top -->
-				<div class="footer-top">
-					<div class="container footer-top-row">
-						<div class="footer-contact">
-							<a class="footer-logo-link" href="index.html">
-								<img class="footer-logo" src="img/icons/footer-logo.svg" width="138" height="23" alt="Логотип Техномарта">
-							</a>
-							<p>г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8
-								<a class="footer-phone" href="tel:+78125550555">+7 (812) 555-05-55</a>
-							</p>
-						</div>
-						<ul class="footer-navigation">
-							<li><a href="#">Компания</a></li>
-							<li><a href="#">Новости</a></li>
-							<li><a href="#">Каталог</a></li>
-							<li><a href="#">Доставка</a></li>
-							<li><a href="#">Контакты</a></li>
-						</ul>
-						<ul class="footer-offers">
-							<li><a href="#">Материалы</a></li>
-							<li><a href="#">Техника</a></li>
-							<li><a href="#">Инструмент</a></li>
-							<li><a href="#">Спецпредложения</a></li>
-						</ul>
-					</div>
+		<!-- footer top -->
+		<div class="footer-top">
+			<div class="container footer-top-row">
+				<div class="footer-contact">
+					<a class="footer-logo-link" href="index.html">
+						<img class="footer-logo" src="img/icons/footer-logo.svg" width="138" height="23" alt="Логотип Техномарта">
+					</a>
+					<p>г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8
+						<a class="footer-phone" href="tel:+78125550555">+7 (812) 555-05-55</a>
+					</p>
 				</div>
-				<!-- footer bottom -->
-				<div class="footer-bottom">
-					<div class="container footer-bottom-row">
-						<p class="copyright">© 2010–2019 Компания «Техномарт» Все права защищены</p>
-						<ul class="footer-bottom-social">
-							<li><a class="btn-social btn-social-vk" href="#" aria-label="Вконтакте"></a></li>
-							<li><a class="btn-social btn-social-fb" href="#" aria-label="Фейсбук"></a></li>
-							<li><a class="btn-social btn-social-i" href="#" aria-label="Инстаграм"></a></li>
-						</ul>
-						<p class="feedback">Обратная связь:
-							<a href="mailto:mail@htmlacademy.ru">mail@htmlacademy.ru</a>
-						</p>
-						<p class="designed-by">Разработано -
-							<a href="https://htmlacademy.ru/intensive/htmlcss" target="_blank">htmlacademy.ru</a>
-						</p>
-					</div>
+				<div class="footer-navigation-items">
+					<ul class="footer-navigation">
+						<li><a href="#">Компания</a></li>
+						<li><a href="#">Новости</a></li>
+						<li><a href="#">Каталог</a></li>
+						<li><a href="#">Доставка</a></li>
+						<li><a href="#">Контакты</a></li>
+					</ul>
+					<ul class="footer-offers">
+						<li><a href="#">Материалы</a></li>
+						<li><a href="#">Техника</a></li>
+						<li><a href="#">Инструмент</a></li>
+						<li><a href="#">Спецпредложения</a></li>
+					</ul>
 				</div>
-			</footer>
+			</div>
+		</div>
+		<!-- footer bottom -->
+		<div class="footer-bottom">
+			<div class="container footer-bottom-row">
+				<p class="copyright">© 2010–2019 Компания «Техномарт» Все права защищены</p>
+				<ul class="footer-social">
+					<li><a class="btn-social btn-social-vk" href="#" aria-label="Вконтакте"></a></li>
+					<li><a class="btn-social btn-social-fb" href="#" aria-label="Фейсбук"></a></li>
+					<li><a class="btn-social btn-social-i" href="#" aria-label="Инстаграм"></a></li>
+				</ul>
+				<p class="feedback">Обратная связь:
+					<a href="mailto:mail@htmlacademy.ru">mail@htmlacademy.ru</a>
+				</p>
+				<p class="designed-by">Разработано -
+					<a href="https://htmlacademy.ru/intensive/htmlcss">htmlacademy.ru</a>
+				</p>
+			</div>
+		</div>
+	</footer>
 
 				<!-- MODAL CARD -->
 				<section class="modal modal-card">
