--- a/inner.html
+++ b/inner.html
@@ -147,106 +147,133 @@
 				</div>
 
 				<!-- PRODUCT LIST -->
-				<section class="product-list">
+				<section class="catalog-items">
 					<h2 class="visually-hidden product-title">Список товаров</h2>
 					<!-- product item 1 -->
-					<article class="product-item">
-						<img class="product-photo" src="img/Perforator_1.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 3000">
-						<h3>Перфоратор BOSCH BFG 3000</h3>
-						<del>22500 р.</del>
-						<a class="price" href="#">15500 р.</a>
-						<div class="">
-							<a class="buy-link" href="#">Купить</a>
-							<a class="bookmarks-link" href="#">В закладки</a>
+					<article class="catalog-item">
+						<div class="catalog-item-flag">новинка</div>
+						<div class="actions">
+							<a class="buy" href="#">Купить</a>
+							<a class="bookmarks" href="#">В закладки</a>
 						</div>
+						<div class="image">
+							<img src="img/Perforator_1.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 3000">
+						</div>
+						<h3 class="title">Перфоратор BOSCH BFG 3000</h3>
+						<span class="discount">22500 р.</span>
+						<span class="price" href="#">15500 р.</span>
 					</article>
 					<!-- product item 2 -->
-					<article class="product-item">
-						<img class="product-photo" src="img/Perforator_2.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 6000">
-						<h3>Перфоратор BOSCH BFG 6000</h3>
-						<del>30500 р.</del>
-						<a class="price" href="#">25500 р.</a>
-						<div class="">
-							<a class="buy-link" href="#">Купить</a>
-							<a class="bookmarks-link" href="#">В закладки</a>
+					<article class="catalog-item">
+						<div class="catalog-item-flag">новинка</div>
+						<div class="actions">
+							<a class="buy" href="#">Купить</a>
+							<a class="bookmarks" href="#">В закладки</a>
 						</div>
+						<div class="image">
+							<img src="img/Perforator_2.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 6000">
+						</div>
+						<h3 class="title">Перфоратор BOSCH BFG 6000</h3>
+						<span class="discount">30500 р.</span>
+						<span class="price" href="#">25500 р.</span>
 					</article>
 					<!-- product item 3 -->
-					<article class="product-item">
-						<img class="product-photo" src="img/Perforator_3.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 2000">
-						<h3>Перфоратор BOSCH BFG 2000</h3>
-						<del></del>
-						<a class="price" href="#">12500 р.</a>
-						<div class="">
-							<a class="buy-link" href="#">Купить</a>
-							<a class="bookmarks-link" href="#">В закладки</a>
+					<article class="catalog-item">
+						<div class="catalog-item-flag">новинка</div>
+						<div class="actions">
+							<a class="buy" href="#">Купить</a>
+							<a class="bookmarks" href="#">В закладки</a>
 						</div>
+						<div class="image">
+							<img src="img/Perforator_3.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 2000">
+						</div>
+						<h3 class="title">Перфоратор BOSCH BFG 2000</h3>
+						<span class="discount"></span>
+						<span class="price" href="#">12500 р.</span>
 					</article>
 					<!-- product item 4 -->
-					<article class="product-item">
-						<img class="product-photo" src="img/Perforator_1.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 3000">
-						<h3>Перфоратор BOSCH BFG 3000</h3>
-						<del>22500 р.</del>
-						<a class="price" href="#">15500 р.</a>
-						<div class="">
-							<a class="buy-link" href="#">Купить</a>
-							<a class="bookmarks-link" href="#">В закладки</a>
+					<article class="catalog-item">
+						<div class="catalog-item-flag">новинка</div>
+						<div class="actions">
+							<a class="buy" href="#">Купить</a>
+							<a class="bookmarks" href="#">В закладки</a>
 						</div>
+						<div class="image">
+							<img src="img/Perforator_1.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 3000">
+						</div>
+						<h3 class="title">Перфоратор BOSCH BFG 3000</h3>
+						<span class="discount">22500 р.</span>
+						<span class="price" href="#">15500 р.</span>
 					</article>
 					<!-- product item 5 -->
-					<article class="product-item">
-						<img class="product-photo" src="img/Perforator_2.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 6000">
-						<h3>Перфоратор BOSCH BFG 6000</h3>
-						<del>30500 р.</del>
-						<a class="price" href="#">25500 р.</a>
-						<div class="">
-							<a class="buy-link" href="#">Купить</a>
-							<a class="bookmarks-link" href="#">В закладки</a>
+					<article class="catalog-item">
+						<div class="catalog-item-flag">новинка</div>
+						<div class="actions">
+							<a class="buy" href="#">Купить</a>
+							<a class="bookmarks" href="#">В закладки</a>
 						</div>
+						<div class="image">
+							<img src="img/Perforator_2.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 6000">
+						</div>
+						<h3 class="title">Перфоратор BOSCH BFG 6000</h3>
+						<span class="discount">30500 р.</span>
+						<span class="price" href="#">25500 р.</span>
 					</article>
 					<!-- product item 6 -->
-					<article class="product-item">
-						<img class="product-photo" src="img/perforator_3.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 2000">
-						<h3>Перфоратор BOSCH BFG 2000</h3>
-						<del></del>
-						<a class="price" href="#">12500 р.</a>
-						<div class="">
-							<a class="buy-link" href="#">Купить</a>
-							<a class="bookmarks-link" href="#">В закладки</a>
+					<article class="catalog-item">
+						<div class="catalog-item-flag">новинка</div>
+						<div class="actions">
+							<a class="buy" href="#">Купить</a>
+							<a class="bookmarks" href="#">В закладки</a>
 						</div>
+						<div class="image">
+							<img src="img/perforator_3.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 2000">
+						</div>
+						<h3 class="title">Перфоратор BOSCH BFG 2000</h3>
+						<span class="discount"></span>
+						<span class="price" href="#">12500 р.</span>
 					</article>
 					<!-- product item 7 -->
-					<article class="product-item">
-						<img class="product-photo" src="img/Perforator_1.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 3000">
-						<h3>Перфоратор BOSCH BFG 3000</h3>
-						<del>22500 р.</del>
-						<a class="price" href="#">15500 р.</a>
-						<div class="">
-							<a class="buy-link" href="#">Купить</a>
-							<a class="bookmarks-link" href="#">В закладки</a>
+					<article class="catalog-item">
+						<div class="catalog-item-flag">новинка</div>
+						<div class="actions">
+							<a class="buy" href="#">Купить</a>
+							<a class="bookmarks" href="#">В закладки</a>
 						</div>
+						<div class="image">
+							<img src="img/Perforator_1.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 3000">
+						</div>
+						<h3 class="title">Перфоратор BOSCH BFG 3000</h3>
+						<span class="discount">22500 р.</span>
+						<span class="price" href="#">15500 р.</span>
 					</article>
 					<!-- product item 8 -->
-					<article class="product-item">
-						<img class="product-photo" src="img/Perforator_2.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 6000">
-						<h3>Перфоратор BOSCH BFG 6000</h3>
-						<del>30500 р.</del>
-						<a class="price" href="#">25500 р.</a>
-						<div class="">
-							<a class="buy-link" href="#">Купить</a>
-							<a class="bookmarks-link" href="#">В закладки</a>
+					<article class="catalog-item">
+						<div class="catalog-item-flag">новинка</div>
+						<div class="actions">
+							<a class="buy" href="#">Купить</a>
+							<a class="bookmarks" href="#">В закладки</a>
 						</div>
+						<div class="image">
+							<img src="img/Perforator_2.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 6000">
+						</div>
+						<h3 class="title">Перфоратор BOSCH BFG 6000</h3>
+						<span class="discount">30500 р.</span>
+						<span class="price" href="#">25500 р.</span>
 					</article>
 					<!-- product item 9 -->
-					<article class="product-item">
-						<img class="product-photo" src="img/Perforator_3.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 2000">
-						<h3>Перфоратор BOSCH BFG 2000</h3>
-						<del></del>
-						<a class="price" href="#">12500 р.</a>
-						<div class="">
-							<a class="buy-link" href="#">Купить</a>
-							<a class="bookmarks-link" href="#">В закладки</a>
+					<article class="catalog-item">
+						<div class="catalog-item-flag">новинка</div>
+						<div class="actions">
+							<a class="buy" href="#">Купить</a>
+							<a class="bookmarks" href="#">В закладки</a>
 						</div>
+						<div class="image">
+							<img src="img/Perforator_3.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 2000">
+						</div>
+						<h3 class="title">Перфоратор BOSCH BFG 2000</h3>
+						<span class="discount"></span>
+						<span class="price" href="#">12500 р.</span>
 					</article>
 				</section>
 				<!--pagination list -->
