--- a/index.html
+++ b/index.html
@@ -112,55 +112,69 @@
 			<!-- POPULAR PRODUCTS -->
 			<section class="popular-products">
 				<div class="container">
-				<div class="">
-					<h2 class="popular-product-title">Популярные товары:</h2>
-					<a class="btn popular-products-btn" href="#">Все популярные товары</a>
+					<div class="">
+						<h2 class="popular-product-title">Популярные товары:</h2>
+						<a class="btn popular-products-btn" href="#">Все популярные товары</a>
+					</div>
+					<div class="popular-products-items">
+						<!-- product item 1 -->
+						<article class="catalog-item">
+							<div class="catalog-item-flag">новинка</div>
+							<div class="actions">
+								<a class="buy" href="#">Купить</a>
+								<a class="bookmarks">В закладки</a>
+							</div>
+							<div class="image">
+								<img src="img/Perforator_0.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 9000">
+							</div>
+							<h3 class="title">Перфоратор BOSCH BFG 9000</h3>
+							<span class="discount">32500 Р.</span>
+							<span class="price" href="#">25500 Р.</span>
+						</article>
+						<!-- product item 2 -->
+						<article class="catalog-item">
+							<div class="catalog-item-flag">новинка</div>
+							<div class="actions">
+								<a class="buy" href="#">Купить</a>
+								<a class="bookmarks">В закладки</a>
+							</div>
+							<div class="image">
+								<img src="img/Perforator_1.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 3000">
+							</div>
+							<h3 class="title">Перфоратор BOSCH BFG 3000</h3>
+							<span class="discount">22500 р.</span>
+							<span class="price" href="#">15500 р.</span>
+						</article>
+						<!-- product item 3 -->
+						<article class="catalog-item">
+							<div class="catalog-item-flag">новинка</div>
+							<div class="actions">
+								<a class="buy" href="#">Купить</a>
+								<a class="bookmarks">В закладки</a>
+							</div>
+							<div class="image">
+								<img src="img/Perforator_2.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 6000">
+							</div>
+							<h3 class="title">Перфоратор BOSCH BFG 6000</h3>
+							<span class="discount">30500 р.</span>
+							<span class="price" href="#">25500 р.</span>
+						</article>
+						<!-- product item 4 -->
+						<article class="catalog-item">
+							<div class="catalog-item-flag">новинка</div>
+							<div class="actions">
+								<a class="buy" href="#">Купить</a>
+								<a class="bookmarks">В закладки</a>
+							</div>
+							<div class="image">
+								<img src="img/Perforator_3.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 2000">
+							</div>
+							<h3 class="title">Перфоратор BOSCH BFG 2000</h3>
+							<span class="discount"></span>
+							<span class="price" href="#">12500 р.</span>
+						</article>
+					</div>
 				</div>
-				<!-- product item 1 -->
-				<article class="product-item">
-					<img class="product-photo" src="img/Perforator_0.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 3000">
-					<h3>Перфоратор BOSCH BFG 9000</h3>
-					<del>32500 Р.</del>
-					<a class="price" href="#">25500 Р.</a>
-					<div class="">
-						<a class="buy-link" href="#">Купить</a>
-						<a class="bookmarks-link" href="#">В закладки</a>
-					</div>
-				</article>
-				<!-- product item 2 -->
-				<article class="product-item">
-					<img class="product-photo" src="img/Perforator_1.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 3000">
-					<h3>Перфоратор BOSCH BFG 3000</h3>
-					<del>22500 P.</del>
-					<a class="price" href="#">15500 P.</a>
-					<div class="">
-						<a class="buy-link" href="#">Купить</a>
-						<a class="bookmarks-link" href="#">В закладки</a>
-					</div>
-				</article>
-				<!-- product item 3 -->
-				<article class="product-item">
-					<img class="product-photo" src="img/Perforator_2.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 6000">
-					<h3>Перфоратор BOSCH BFG 6000</h3>
-					<del>30500 P.</del>
-					<a class="price" href="#">25500 P.</a>
-					<div class="">
-						<a class="buy-link" href="#">Купить</a>
-						<a class="bookmarks-link" href="#">В закладки</a>
-					</div>
-				</article>
-				<!-- product item 4 -->
-				<article class="product-item">
-					<img class="product-photo" src="img/Perforator_3.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 2000">
-					<h3>Перфоратор BOSCH BFG 2000</h3>
-					<del></del>
-					<a class="price" href="#">12500 P.</a>
-					<div class="">
-						<a class="buy-link" href="#">Купить</a>
-						<a class="bookmarks-link" href="#">В закладки</a>
-					</div>
-				</article>
-			</div>
 			</section>
 			<!-- BRANDS -->
 			<section class="brands">
