--- a/index.html
+++ b/index.html
@@ -112,8 +112,8 @@
 			<!-- POPULAR PRODUCTS -->
 			<section class="popular-products">
 				<div class="container">
-					<div class="">
-						<h2 class="popular-product-title">Популярные товары:</h2>
+					<div class="popular-products-title">
+						<h2>Популярные товары:</h2>
 						<a class="btn popular-products-btn" href="#">Все популярные товары</a>
 					</div>
 					<div class="popular-products-items">
@@ -179,8 +179,10 @@
 			<!-- BRANDS -->
 			<section class="brands">
 				<div class="container">
-					<h2 class="brands-title">Популярные производители:</h2>
-					<a class="btn brands-btn" href="#">Все производители</a>
+					<div class="popular-brands-title">
+						<h2 class="brands-title">Популярные производители:</h2>
+						<a class="btn brands-btn" href="#">Все производители</a>
+					</div>
 				<!-- brands-list -->
 				<ul class="brands-list">
 					<li class="brands-bosch">
