--- a/index.html
+++ b/index.html
@@ -180,33 +180,33 @@
 			<section class="brands">
 				<div class="container">
 					<div class="popular-brands-title">
-						<h2 class="brands-title">Популярные производители:</h2>
+						<h2>Популярные производители:</h2>
 						<a class="btn brands-btn" href="#">Все производители</a>
 					</div>
 				<!-- brands-list -->
-				<ul class="brands-list">
-					<li class="brands-bosch">
+				<ul class="brands-items">
+					<li class="brands-item brands-bosch">
 						<a href="#"><img src="img/bosch.jpg" width="137" height="37" alt="Товарный знак бренда Bosch"></a>
 					</li>
-					<li class="brands-makita">
+					<li class="brands-item brands-makita">
 						<a href="#"><img src="img/makita.jpg" width="123" height="40" alt="Товарный знак бренда Makita"></a>
 					</li>
-					<li class="brands-dewalt">
+					<li class="brands-item brands-dewalt">
 						<a href="#"><img src="img/dewalt.jpg" width="146" height="44" alt="Товарный знак бренда DeWalt"></a>
 					</li>
-					<li class="brands-interscol">
+					<li class="brands-item brands-interscol">
 						<a href="#"><img src="img/интерскол.jpg" width="200" height="88" alt="Товарный знак бренда Интерскол"></a>
 					</li>
-					<li class="brands-hitachi">
+					<li class="brands-item brands-hitachi">
 						<a href="#"><img src="img/hitachi.jpg" width="169" height="31" alt="Товарный знак бренда HITACHI"></a>
 					</li>
-					<li class="brands-lg">
+					<li class="brands-item brands-lg">
 						<a href="#"><img src="img/lg.jpg" width="121" height="73" alt="Товарный знак бренда LG"></a>
 					</li>
-					<li class="brands-aeg">
+					<li class="brands-item brands-aeg">
 						<a href="#"><img src="img/aeg.jpg" width="151" height="96" alt="Товарный знак бренда AEG"></a>
 					</li>
-					<li class="brands-metabo">
+					<li class="brands-item brands-metabo">
 						<a href="#"><img src="img/metabo.jpg" width="204" height="69" alt="Товарный знак бренда Metabo"></a>
 					</li>
 				</ul>
@@ -226,9 +226,9 @@
 								<li><a href="#">Гарантия</a></li>
 								<li><a href="#">Кредит</a></li>
 							</ul>
-							<h2 class="delivery-title">Доставка</h2>
-							<p>Мы с удовольствием доставим ваш товар прямо к вашему подъезду совершенно бесплатно! Ведь мы неплохо заработаем, поднимая его на ваш этаж!</p>
-							<img src="img/delivery-truck.jpg" alt="">
+								<h2 class="delivery-title">Доставка</h2>
+								<p>Мы с удовольствием доставим ваш товар прямо к вашему подъезду совершенно бесплатно! Ведь мы неплохо заработаем, поднимая его на ваш этаж!</p>
+								<img src="img/delivery-truck.jpg" alt="">
 						</div>
 					</div>
 				</div>
