--- a/inner.html
+++ b/inner.html
@@ -152,128 +152,128 @@
 					<!-- product item 1 -->
 					<article class="catalog-item">
 						<div class="catalog-item-flag">новинка</div>
-						<div class="actions">
-							<a class="buy" href="#">Купить</a>
-							<a class="bookmarks" href="#">В закладки</a>
+						<div class="catalog-item-actions">
+							<a class="catalog-item-buy" href="#">Купить</a>
+							<a class="catalog-item-bookmarks" href="#">В закладки</a>
 						</div>
-						<div class="image">
+						<div class="catalog-item-image">
 							<img src="img/Perforator_1.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 3000">
 						</div>
-						<h3 class="title">Перфоратор BOSCH BFG 3000</h3>
-						<span class="discount">22500 р.</span>
-						<span class="price" href="#">15500 р.</span>
+						<h3 class="catalog-item-title">Перфоратор BOSCH BFG 3000</h3>
+						<span class="catalog-item-discount">22500 р.</span>
+						<span class="catalog-item-price">15500 р.</span>
 					</article>
 					<!-- product item 2 -->
 					<article class="catalog-item">
 						<div class="catalog-item-flag">новинка</div>
-						<div class="actions">
-							<a class="buy" href="#">Купить</a>
-							<a class="bookmarks" href="#">В закладки</a>
+						<div class="catalog-item-actions">
+							<a class="catalog-item-buy" href="#">Купить</a>
+							<a class="catalog-item-bookmarks" href="#">В закладки</a>
 						</div>
-						<div class="image">
+						<div class="catalog-item-image">
 							<img src="img/Perforator_2.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 6000">
 						</div>
-						<h3 class="title">Перфоратор BOSCH BFG 6000</h3>
-						<span class="discount">30500 р.</span>
-						<span class="price" href="#">25500 р.</span>
+						<h3 class="catalog-item-title">Перфоратор BOSCH BFG 6000</h3>
+						<span class="catalog-item-discount">30500 р.</span>
+						<span class="catalog-item-price">25500 р.</span>
 					</article>
 					<!-- product item 3 -->
 					<article class="catalog-item">
 						<div class="catalog-item-flag">новинка</div>
-						<div class="actions">
-							<a class="buy" href="#">Купить</a>
-							<a class="bookmarks" href="#">В закладки</a>
+						<div class="catalog-item-actions">
+							<a class="catalog-item-buy" href="#">Купить</a>
+							<a class="catalog-item-bookmarks" href="#">В закладки</a>
 						</div>
-						<div class="image">
+						<div class="catalog-item-image">
 							<img src="img/Perforator_3.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 2000">
 						</div>
-						<h3 class="title">Перфоратор BOSCH BFG 2000</h3>
-						<span class="discount"></span>
-						<span class="price" href="#">12500 р.</span>
+						<h3 class="catalog-item-title">Перфоратор BOSCH BFG 2000</h3>
+						<span class="catalog-item-discount"></span>
+						<span class="catalog-item-price">12500 р.</span>
 					</article>
 					<!-- product item 4 -->
 					<article class="catalog-item">
 						<div class="catalog-item-flag">новинка</div>
-						<div class="actions">
-							<a class="buy" href="#">Купить</a>
-							<a class="bookmarks" href="#">В закладки</a>
+						<div class="catalog-item-actions">
+							<a class="catalog-item-buy" href="#">Купить</a>
+							<a class="catalog-item-bookmarks" href="#">В закладки</a>
 						</div>
-						<div class="image">
+						<div class="catalog-item-image">
 							<img src="img/Perforator_1.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 3000">
 						</div>
-						<h3 class="title">Перфоратор BOSCH BFG 3000</h3>
-						<span class="discount">22500 р.</span>
-						<span class="price" href="#">15500 р.</span>
+						<h3 class="catalog-item-title">Перфоратор BOSCH BFG 3000</h3>
+						<span class="catalog-item-discount">22500 р.</span>
+						<span class="catalog-item-price">15500 р.</span>
 					</article>
 					<!-- product item 5 -->
 					<article class="catalog-item">
 						<div class="catalog-item-flag">новинка</div>
-						<div class="actions">
-							<a class="buy" href="#">Купить</a>
-							<a class="bookmarks" href="#">В закладки</a>
+						<div class="catalog-item-actions">
+							<a class="catalog-item-buy" href="#">Купить</a>
+							<a class="catalog-item-bookmarks" href="#">В закладки</a>
 						</div>
-						<div class="image">
+						<div class="catalog-item-image">
 							<img src="img/Perforator_2.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 6000">
 						</div>
-						<h3 class="title">Перфоратор BOSCH BFG 6000</h3>
-						<span class="discount">30500 р.</span>
-						<span class="price" href="#">25500 р.</span>
+						<h3 class="catalog-item-title">Перфоратор BOSCH BFG 6000</h3>
+						<span class="catalog-item-discount">30500 р.</span>
+						<span class="catalog-item-price">25500 р.</span>
 					</article>
 					<!-- product item 6 -->
 					<article class="catalog-item">
 						<div class="catalog-item-flag">новинка</div>
-						<div class="actions">
-							<a class="buy" href="#">Купить</a>
-							<a class="bookmarks" href="#">В закладки</a>
+						<div class="catalog-item-actions">
+							<a class="catalog-item-buy" href="#">Купить</a>
+							<a class="catalog-item-bookmarks" href="#">В закладки</a>
 						</div>
-						<div class="image">
+						<div class="catalog-item-image">
 							<img src="img/perforator_3.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 2000">
 						</div>
-						<h3 class="title">Перфоратор BOSCH BFG 2000</h3>
-						<span class="discount"></span>
-						<span class="price" href="#">12500 р.</span>
+						<h3 class="catalog-item-title">Перфоратор BOSCH BFG 2000</h3>
+						<span class="catalog-item-discount"></span>
+						<span class="catalog-item-price">12500 р.</span>
 					</article>
 					<!-- product item 7 -->
 					<article class="catalog-item">
 						<div class="catalog-item-flag">новинка</div>
-						<div class="actions">
-							<a class="buy" href="#">Купить</a>
-							<a class="bookmarks" href="#">В закладки</a>
+						<div class="catalog-item-actions">
+							<a class="catalog-item-buy" href="#">Купить</a>
+							<a class="catalog-item-bookmarks" href="#">В закладки</a>
 						</div>
-						<div class="image">
+						<div class="catalog-item-image">
 							<img src="img/Perforator_1.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 3000">
 						</div>
-						<h3 class="title">Перфоратор BOSCH BFG 3000</h3>
-						<span class="discount">22500 р.</span>
-						<span class="price" href="#">15500 р.</span>
+						<h3 class="catalog-item-title">Перфоратор BOSCH BFG 3000</h3>
+						<span class="catalog-item-discount">22500 р.</span>
+						<span class="catalog-item-price">15500 р.</span>
 					</article>
 					<!-- product item 8 -->
 					<article class="catalog-item">
 						<div class="catalog-item-flag">новинка</div>
-						<div class="actions">
-							<a class="buy" href="#">Купить</a>
-							<a class="bookmarks" href="#">В закладки</a>
+						<div class="catalog-item-actions">
+							<a class="catalog-item-buy" href="#">Купить</a>
+							<a class="catalog-item-bookmarks" href="#">В закладки</a>
 						</div>
-						<div class="image">
+						<div class="catalog-item-image">
 							<img src="img/Perforator_2.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 6000">
 						</div>
-						<h3 class="title">Перфоратор BOSCH BFG 6000</h3>
-						<span class="discount">30500 р.</span>
-						<span class="price" href="#">25500 р.</span>
+						<h3 class="catalog-item-title">Перфоратор BOSCH BFG 6000</h3>
+						<span class="catalog-item-discount">30500 р.</span>
+						<span class="catalog-item-price">25500 р.</span>
 					</article>
 					<!-- product item 9 -->
 					<article class="catalog-item">
 						<div class="catalog-item-flag">новинка</div>
-						<div class="actions">
-							<a class="buy" href="#">Купить</a>
-							<a class="bookmarks" href="#">В закладки</a>
+						<div class="catalog-item-actions">
+							<a class="catalog-item-buy" href="#">Купить</a>
+							<a class="catalog-item-bookmarks" href="#">В закладки</a>
 						</div>
-						<div class="image">
+						<div class="catalog-item-image">
 							<img src="img/Perforator_3.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 2000">
 						</div>
-						<h3 class="title">Перфоратор BOSCH BFG 2000</h3>
-						<span class="discount"></span>
-						<span class="price" href="#">12500 р.</span>
+						<h3 class="catalog-item-title">Перфоратор BOSCH BFG 2000</h3>
+						<span class="catalog-item-discount"></span>
+						<span class="catalog-item-price">12500 р.</span>
 					</article>
 				</section>
 				<!--pagination list -->
