стилизовал раздел доставки

--- a/index.html
+++ b/index.html
@@ -221,14 +221,18 @@
 							<p>Хороший интернет-магазин отличается от плохого не только ценами! Мы стараемся изо всех сил, чтобы сделать ваши покупки приятными.</p>
 						</div>
 						<div class="delivery-container">
-							<ul class="delivery-list">
-								<li><a href="#">Доставка</a></li>
-								<li><a href="#">Гарантия</a></li>
-								<li><a href="#">Кредит</a></li>
-							</ul>
-								<h2 class="delivery-title">Доставка</h2>
-								<p>Мы с удовольствием доставим ваш товар прямо к вашему подъезду совершенно бесплатно! Ведь мы неплохо заработаем, поднимая его на ваш этаж!</p>
-								<img src="img/delivery-truck.jpg" alt="">
+							<div class="delivery-controls">
+								<button class="delivery-control" type="button">Доставка</button>
+								<button class="delivery-control" type="button">Гарантия</button>
+								<button class="delivery-control" type="button">Кредит</button>
+							</div>
+							<div class="delivery-slider">
+								<div class="delivery-slider-content">
+									<h2 class="delivery-title">Доставка</h2>
+									<p>Мы с удовольствием доставим ваш товар прямо к вашему подъезду совершенно бесплатно! Ведь мы неплохо заработаем,<br> поднимая его на ваш этаж!</p>
+								</div>
+								<img class="delivery-img" src="img/delivery-truck.png" width="468" height="261" alt="">
+							</div>
 						</div>
 					</div>
 				</div>
