сверстал modal-feedback

--- a/inner.html
+++ b/inner.html
@@ -63,17 +63,17 @@
 		<!-- breakdcrumbs -->
 		<div class="container">
 		<ul class="breadcrumbs">
-			<li class="breadcrumbs-item"><a href="#"></a></li>
-			<li class="breadcrumbs-item"><a href="#">Каталог</a></li>
-			<li class="breadcrumbs-item"><a href="#">Инструмент</a></li>
-			<li class="breadcrumbs-item breadcrumbs-current">Перфораторы</li>
+			<li class="breadcrumbs-item breadcrumbs-home"><a href="#"></a></li>
+			<li class="breadcrumbs-item breadcrumbs-catalog"><a href="#">Каталог</a></li>
+			<li class="breadcrumbs-item breadcrumbs-tool"><a href="#">Инструмент</a></li>
+			<li class="breadcrumbs-item breadcrumbs-perforator breadcrumbs-current">Перфораторы</li>
 		</ul>
 		<h2 class="main-title">Перфораторы</h2>
 	</div>
 		<!-- FILTER -->
 		<div class="container main-filter-row">
 			<section class="filters">
-				<h2>Каталог товаров</h2>
+				<h2 class="visually-hidden">Каталог товаров</h2>
 				<form class="filter" method="get" action="https://echo.htmlacademy.ru">
 					<span class="filter-title">Фильтр:</span>
 					<fieldset>
