--- a/index.html
+++ b/index.html
@@ -317,19 +317,23 @@
 		<section class="modal modal-feedback">
 			<h2 class="visually-hidden">Напишите нам</h2>
 			<form class="feedback-form" action="https://echo.htmlacademy.ru" method="post">
-				<p>
-					<label for="name">Ваше имя:</label>
-					<input type="text" name="name" id="name" placeholder="Имя Фамилия">
-				</p>
-				<p>
-					<label for="email">Ваш e-mail:</label>
-					<input type="email" name="email" id="email" placeholder="email@example.com">
-				</p>
-				<p>
-					<label for="message">Текст письма:</label>
-					<textarea id="message" name="message" placeholder="В свободной форме"></textarea>
-				</p>
-				<button class="btn btn-send" type="submit">Отправить</button>
+				<div class="feedback-form-main">
+					<p class="feedback-name-item">
+						<label for="name">Ваше имя:</label>
+						<input type="text" name="name" id="name" placeholder="Имя Фамилия">
+					</p>
+					<p class="feedback-email-item">
+						<label for="email">Ваш e-mail:</label>
+						<input type="email" name="email" id="email" placeholder="email@example.com">
+					</p>
+					<p class="feedback-message-item">
+						<label for="message">Текст письма:</label>
+						<textarea id="message" name="message" placeholder="В свободной форме"></textarea>
+					</p>
+				</div>
+				<div class="btn-send-background">
+					<button class="btn-send" type="submit">Отправить</button>
+				</div>
 				<button class="modal-close" type="button" aria-label="Закрыть модальное окно"></button>
 			</form>
 		</section>
