модалка на index.html

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 					<a class="phone-number" href="tel:+78125550555">+7 (812) 555-05-55</a>
 					<p class="address">г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p>
 				</div>
-					<a class="user-link login-link" href="#">Вход</a>
+					<a class="user-link login-link" href="#">Войти</a>
 					<a class="user-link registration-link" href="#">Регистрация</a>
 			</div>
 			<div class="container">
