--- a/inner.html
+++ b/inner.html
@@ -14,7 +14,7 @@
 		<!-- top menu -->
 			<div class="header-top-wrapper">
 			<div class="container header-top-row">
-				<a class="header-logo-link">
+				<a class="header-logo-link" href="index.html">
 					<img class="header-logo" src="img/icons/header-logo.svg" width="111" height="18" alt="Логотип Техномарта">
 				</a>
 				<div class="search">
