--- a/inner.html
+++ b/inner.html
@@ -348,12 +348,13 @@
 
 				<!-- MODAL CARD -->
 				<section class="modal modal-card">
-					<h2>Оформление заказа</h2>
+					<h2 class="visually-hidden">Оформление заказа</h2>
 					<span>Товар добавлен в корзину!</span>
-					<a class="btn-checkout" href="#">Оформить заказ</a>
-					<button class="btn-continue-shopping" type="button">Продолжить покупки</button>
-					<button class="modal-close" type="button" aria-label="Закрыть модальное окно"></button>
+					<div class="modal-background">
+						<a class="btn-checkout" href="#">Оформить заказ</a>
+						<button class="btn-continue-shopping" type="button">Продолжить покупки</button>
+						<button class="modal-close" type="button" aria-label="Закрыть модальное окно"></button>
+					</div>
 				</section>
 		</body>
-
 		</html>
