--- a/inner.html
+++ b/inner.html
@@ -33,7 +33,7 @@
 		</div>
 		<!-- main navigation -->
 		<div class="container user-navigation-row">
-			<h1 class="page-title">Интернет-магазин строительных материалов и инструментов для ремонта</h1>
+			<h1 class="page-title">Интернет-магазин строительных материалов<br> и инструментов для ремонта</h1>
 			<div class="navigation-contacts">
 				<a class="phone-number" href="tel:+78125550555">+7 (812) 555-05-55</a>
 				<p class="address">г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p>
@@ -276,6 +276,7 @@
 						<span class="catalog-item-price">12500 р.</span>
 					</article>
 				</section>
+
 				<!--pagination list -->
 				<ul class="pagination-list">
 					<li class="pagination-item pagination-item-current"><a class="pagination-link pagination-link-current" href="#">1</a></li>
