--- a/index.html
+++ b/index.html
@@ -315,6 +315,7 @@
 
 	<!-- MODAL-FEEDBACK-->
 		<section class="modal modal-feedback">
+			<div class="modal-main">
 			<h2 class="visually-hidden">Напишите нам</h2>
 			<form class="feedback-form" action="https://echo.htmlacademy.ru" method="post">
 				<div class="feedback-form-main">
@@ -331,6 +332,7 @@
 						<textarea id="message" name="message" placeholder="В свободной форме"></textarea>
 					</p>
 				</div>
+			</div>
 				<div class="btn-send-background">
 					<button class="btn-send" type="submit">Отправить</button>
 				</div>
