завершил стилизацию главной

--- a/index.html
+++ b/index.html
@@ -28,12 +28,12 @@
 				</div>
 					<a class="bookmark-link" href="#">Закладки: 0</a>
 					<a class="basket-link" href="#">Корзина: 0</a>
-				<a class="btn btn-order" href="#">Оформить заказ</a>
+				<a class="btn-order" href="#">Оформить заказ</a>
 			</div>
 		</div>
 			<!-- main navigation -->
 			<div class="container user-navigation-row">
-				<h1 class="page-title">Интернет-магазин строительных материалов<br> и инструментов для ремонта</h1>
+				<h1 class="page-title">Интернет-магазин строительных материалов и&nbsp;инструментов для ремонта</h1>
 				<div class="navigation-contacts">
 					<a class="phone-number" href="tel:+78125550555">+7 (812) 555-05-55</a>
 					<p class="address">г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p>
@@ -78,17 +78,17 @@
 					<ul class="slider-list">
 						<li class="slider-item slider-item-current">
 							<div class="slider-top">
-							    <h2 class="slide-title">Дрели</h2>
-							    <p class="slider-text">Соседям на радость</p>
-						    </div>
-						    <a class="slider-link" href="#">Открыть каталог</a>
+								<h2 class="slide-title">Дрели</h2>
+								<p class="slider-text">Соседям на радость</p>
+							</div>
+							<a class="btn slider-link" href="#">Открыть каталог</a>
 						</li>
 						<li class="slider-item">
 							<div class="slider-top">
-							    <h2 class="slide-title">Перфоратор</h2>
-							    <p class="slider-text">Настоящие мужские игрушки</p>
-							    <a class="slider-link" href="#">Открыть каталог</a>
-						    </div>
+								<h2 class="slide-title">Перфоратор</h2>
+								<p class="slider-text">Настоящие мужские игрушки</p>
+							</div>
+							<a class="slider-link" href="#">Открыть каталог</a>
 						</li>
 					</ul>
 					<div class="slider-controls">
@@ -217,26 +217,49 @@
 			</div>
 			</section>
 			<!-- DELIVERY -->
-			<section class="delivery">
-				<div class="delivery-wrapper">
+			<section class="services">
+				<div class="services-wrapper">
 					<div class="container">
-						<div class="delivery-advantage">
+						<div class="services-advantage">
 							<h2 class="services-title">Сервисы</h2>
 							<p>Хороший интернет-магазин отличается от плохого не только ценами! Мы стараемся изо всех сил, чтобы сделать ваши покупки приятными.</p>
 						</div>
-						<div class="delivery-container">
-							<div class="delivery-controls">
-								<button class="delivery-control" type="button">Доставка</button>
-								<button class="delivery-control" type="button">Гарантия</button>
-								<button class="delivery-control" type="button">Кредит</button>
+						<div class="services-container">
+							<div class="services-controls">
+								<button class="services-control" type="button">Доставка</button>
+								<button class="services-control" type="button">Гарантия</button>
+								<button class="services-control" type="button">Кредит</button>
 							</div>
+
+							<!-- delivery slider -->
 							<div class="delivery-slider">
 								<div class="delivery-slider-content">
-									<h2 class="delivery-title">Доставка</h2>
+									<h3 class="delivery-title">Доставка</h3>
 									<p>Мы с удовольствием доставим ваш товар прямо к вашему подъезду совершенно бесплатно! Ведь мы неплохо заработаем,<br> поднимая его на ваш этаж!</p>
 								</div>
 								<img class="delivery-img" src="img/delivery-truck.png" width="468" height="261" alt="">
 							</div>
+
+							<!-- warranty slider -->
+							<div class="warranty-slider">
+								<div class="warranty-slider-content">
+									<h3 class="warranty-title">Гарантия</h3>
+									<p>Если купленный у нас товар поломается или заискрит,<br> а также в случае пожара, спровоцированного его возгаранием,<br>  вы всегда можете быть уверены в нашей гарантии. Мы обменяем сгоревший товар на новый.<br> Дом уж восстановите как-нибудь сами.</p>
+								</div>
+								<img class="warranty-img" src="img/warranty-medal.png" width="389" height="283" alt="">
+							</div>
+
+							<!-- credit slider -->
+							<div class="credit-slider">
+								<div class="credit-slider-content">
+									<h3 class="credit-title">Кредит</h3>
+									<p>Залезть в долговую яму стало проще! Кредитные консультанты придут вам на помощь.</p>
+									<a class="btn credit-btn" href="#">Отправить заявку</a>
+								</div>
+								<img class="credit-img" src="img/credit-cash.png" width="465" height="285" alt="">
+							</div>
+
+
 						</div>
 					</div>
 				</div>
@@ -247,7 +270,7 @@
 					<section class="information-review">
 						<h2 class="information-title">Компания «Техномарт»</h2>
 						<p>Настоящий мужской шоппинг начинается здесь! Огромный выбор товаров для ремонта и строительства не оставит равнодушными любителей сэкономить на гастарбайтерах.</p>
-						<p>Мы можем доставить ваш товар в самые отдаленные точки России! Техномарт работает со многими транспортными компаниями:</p>
+						<p>Мы можем доставить ваш товар в самые отдаленные точки России!<br> Техномарт работает со многими транспортными компаниями:</p>
 						<ul class="collaboration">
 							<li>Деловые линии</li>
 							<li>Автотрейдинг</li>
@@ -314,8 +337,8 @@
 	</footer>
 
 	<!-- MODAL-FEEDBACK-->
-		<section class="modal modal-feedback">
-			<div class="modal-main">
+	<section class="modal modal-feedback">
+		<div class="modal-main">
 			<h2 class="visually-hidden">Напишите нам</h2>
 			<form class="feedback-form" action="https://echo.htmlacademy.ru" method="post">
 				<div class="feedback-form-main">
@@ -332,13 +355,14 @@
 						<textarea id="message" name="message" placeholder="В свободной форме"></textarea>
 					</p>
 				</div>
-			</div>
-				<div class="btn-send-background">
-					<button class="btn-send" type="submit">Отправить</button>
-				</div>
-				<button class="modal-close" type="button" aria-label="Закрыть модальное окно"></button>
 			</form>
-		</section>
+		</div>
+		<div class="btn-send-background">
+			<button class="btn-send" type="submit">Отправить</button>
+		</div>
+		<button class="modal-close" type="button" aria-label="Закрыть модальное окно"></button>
+	</section>
+
 		<!-- MODAL MAP -->
 		<section class="modal modal-map">
 			<h2 class="visually-hidden">Как до нас добраться</h2>
