--- a/inner.html
+++ b/inner.html
@@ -28,12 +28,12 @@
 				</div>
 					<a class="bookmark-link" href="#">Закладки: 0</a>
 					<a class="basket-link basket-full" href="#">Корзина: 10</a>
-				<a class="btn btn-order" href="#">Оформить заказ</a>
+				<a class="btn-order" href="#">Оформить заказ</a>
 			</div>
 		</div>
 		<!-- main navigation -->
 		<div class="container user-navigation-row">
-			<h1 class="page-title">Интернет-магазин строительных материалов<br> и инструментов для ремонта</h1>
+			<h1 class="page-title">Интернет-магазин строительных материалов и&nbsp;инструментов для ремонта</h1>
 			<div class="navigation-contacts">
 				<a class="phone-number" href="tel:+78125550555">+7 (812) 555-05-55</a>
 				<p class="address">г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p>
@@ -104,8 +104,8 @@
 
 
 
-					<fieldset>
-						<legend>Производители:</legend>
+					<fieldset class="filter-item-brands">
+						<legend class='filter-item-title'>Производители:</legend>
 						<ul class="brands-list">
 							<li class="filter-option">
 								<input class="visually-hidden filter-input filter-input-checkbox" type="checkbox" name="Bosch" id="filter-bosch" checked>
