--- a/index.html
+++ b/index.html
@@ -343,16 +343,16 @@
 			<form class="feedback-form" action="https://echo.htmlacademy.ru" method="post">
 				<div class="feedback-form-main">
 					<p class="feedback-name-item">
-						<label for="name">Ваше имя:</label>
-						<input type="text" name="name" id="name" placeholder="Имя Фамилия">
+						<label class="feedback-label" for="name">Ваше имя:</label>
+						<input class="feedback-input" type="text" name="name" id="name" placeholder="Имя Фамилия">
 					</p>
-					<p class="feedback-email-item">
-						<label for="email">Ваш e-mail:</label>
-						<input type="email" name="email" id="email" placeholder="email@example.com">
+					<p class="feedback-name-item">
+						<label class="feedback-label" for="email">Ваш e-mail:</label>
+						<input class="feedback-input" type="email" name="email" id="email" placeholder="email@example.com">
 					</p>
-					<p class="feedback-message-item">
-						<label for="message">Текст письма:</label>
-						<textarea id="message" name="message" placeholder="В свободной форме"></textarea>
+					<p class="feedback-name-item">
+						<label class="feedback-label" for="message">Текст письма:</label>
+						<textarea class="feedback-content-area" id="message" name="message" placeholder="В свободной форме"></textarea>
 					</p>
 				</div>
 			</form>
