--- a/index.html
+++ b/index.html
@@ -76,14 +76,14 @@
 				<!-- slider -->
 				<section class="slider">
 					<ul class="slider-list">
-						<li class="slider-item slider-item-current">
+						<li class="slider-item slider-item-drill slider-item-current">
 							<div class="slider-top">
 								<h2 class="slide-title">Дрели</h2>
 								<p class="slider-text">Соседям на радость</p>
 							</div>
 							<a class="btn slider-link" href="#">Открыть каталог</a>
 						</li>
-						<li class="slider-item">
+						<li class="slider-item slider-item-perforator">
 							<div class="slider-top">
 								<h2 class="slide-title">Перфоратор</h2>
 								<p class="slider-text">Настоящие мужские игрушки</p>
@@ -244,7 +244,7 @@
 							<div class="warranty-slider">
 								<div class="warranty-slider-content">
 									<h3 class="warranty-title">Гарантия</h3>
-									<p>Если купленный у нас товар поломается или заискрит,<br> а также в случае пожара, спровоцированного его возгаранием,<br>  вы всегда можете быть уверены в нашей гарантии. Мы обменяем сгоревший товар на новый.<br> Дом уж восстановите как-нибудь сами.</p>
+									<p>Если купленный у нас товар поломается или заискрит,<br> а также в случае пожара, спровоцированного его возгаранием, вы всегда можете быть уверены в нашей гарантии. Мы обменяем сгоревший товар на новый.<br> Дом уж восстановите как-нибудь сами.</p>
 								</div>
 								<img class="warranty-img" src="img/warranty-medal.png" width="389" height="283" alt="">
 							</div>
