--- a/index.html
+++ b/index.html
@@ -81,14 +81,14 @@
 								<h2 class="slide-title">Дрели</h2>
 								<p class="slider-text">Соседям на радость</p>
 							</div>
-							<a class="btn slider-link" href="#">Открыть каталог</a>
+							<a class="btn slider-link" href="inner.html">Открыть каталог</a>
 						</li>
 						<li class="slider-item slider-item-perforator">
 							<div class="slider-top">
 								<h2 class="slide-title">Перфоратор</h2>
 								<p class="slider-text">Настоящие мужские игрушки</p>
 							</div>
-							<a class="slider-link" href="#">Открыть каталог</a>
+							<a class="slider-link" href="inner.html">Открыть каталог</a>
 						</li>
 					</ul>
 					<div class="slider-controls">
